simple-api/canary/simple-api-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  labels:
    app: simple-api
  name: simple-api-httpproxy
  namespace: api
spec: 
  virtualhost:
    fqdn: simple-api.127.0.0.1.sslip.io
  routes: 
    - conditions:
      - prefix: /
      services:
        - name: simple-api-svc
          port: 8080
